--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "dokumentacja_frontu",
-  "homepage": "",
+  "homepage": "https://ktosfajny.github.io/biuro-obslugi-klienta_docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "gh-pages": "^3.2.0"
+  },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d ."
   },
   "author": "",
   "license": "ISC"
